--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body
 }
 .container
 {
-	width:100%;
+	width:1366px;
 }
 .dashboard-menu ul
 {
@@ -394,4 +394,38 @@ font-size: 21px;
 .slider-hello  ul li figure img
 {
 	height:80px !important;
+}
+@media screen and (min-width:320px) and (min-width:649px)
+{
+	
+	
+}
+@media screen and (min-width:650px) and (min-width:1023px)
+{
+	
+	
+}
+@media screen and (min-width:1024px) and (min-width:1280px)
+{
+	.container
+	{
+		width:100%;
+	}
+	
+}
+@media screen and (min-width:1281px) and (min-width:1366px)
+{
+	.container
+	{
+		width:100%;
+	}
+	
+}
+@media screen and (min-width:1367px) and (min-width:1440px)
+{
+	.container
+	{
+		width:100%;
+	}
+	
 }
